kubernetes/apps/arrs/radarr/app/service-envoy-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-envoy-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.${HOME_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${IPAM_IP_ENVOY_INTERNAL}
spec:
  type: ExternalName
  externalName: envoy-internal.network.svc.cluster.local
