kubernetes/apps/arrs/radarr/app/securitypolicy-oidc.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-oidc
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: radarr-envoy-browser
  oidc:
    provider:
      issuer: https://sso.${HOME_DOMAIN}
    clientIDRef:
      group: ""
      kind: Secret
      name: radarr-oidc-secret
    clientSecret:
      group: ""
      kind: Secret
      name: radarr-oidc-secret
    redirectURL: https://radarr.${HOME_DOMAIN}/oauth2/callback
    logoutPath: /oauth2/logout
    scopes:
    - openid
    - profile
    - email
    refreshToken: true
    forwardAccessToken: false
    passThroughAuthHeader: false
    cookieConfig:
      sameSite: Lax
    cookieNames:
      accessToken: radarr-access-token
      idToken: radarr-id-token
